2010-04-01  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* [Bug 2975449] Kill the Tk 8.2/8.3 ifdeffery - at
	  least the runtime swizzle (I don't consider
	  this a bug at all, because it worked fine
	  as long as it was needed!)
	* [Bug 2907616] configure ignores --mandir switch

2010-03-31  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Sync with latest TEA (tcl.m4), regenerated all
	  configure scripts with autoconf-2.65.
	* Sync genStubs.tcl with latest one from Tcl 8.6,
	  regenerated all *Decls.h files. All stubs
	  pointers are const now.
    
2009-07-26  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Sync with latest TEA (tcl.m4), regenerated all
	  configure scripts.
    
2009-04-28  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Fix [Bug #82910] teacup requires libX11 to run
    
2009-03-12  Stuart Cassoff <stwo@users.sourceforge.net>

	* various fixes to tcl.m4 [Bug #2669308] (Stuart Cassoff)
	  (To be checked in in sampleextension as well.)
	* fix [Bug #2669482] Can't 'make test'

2009-03-12  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* fix "make checkstubs"
	* a few CONST84 eliminations

2009-03-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Revert to using "ld -b" in stead of "${CC} -b" for
	  HP-UX-11; it doesn't work in 64-bit mode.

2009-03-03  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* fix "make genstubs" for libpng, libtiff, libz, libjpeg
	* PNG build fix

2009-02-24  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* gif handler cleanup
	* Allow -index N option for TIFF images too [Feature Request #706277]

2009-02-23  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Attempt to fix HP-UX Itanium 64-bit build
	* revert r177 change to pkgIndex.tcl: it broke TEApot package
	  handling.

2009-02-17  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Move ./libz to ./compat/zlib and ./libz/tcl to ./zlib
	* Move ./libjpeg to ./compat/libjpeg and ./libjpeg/tcl to ./libjpeg